CRTP interface added, macOS specific changes added, spinlockthreadpool added

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,6 +9,14 @@ add_library(${PROJECT_NAME}
 	src/ThreadPool.cpp
 	src/ThreadWorker.hpp
 	src/ThreadWorker.cpp
+	include/IThreadPool.h
+	src/SpinLook.h
+	include/SpinLockThreadPool.h
+	src/SpinLockThreadPool.cpp
+		src/SpinLockThreadWorker.h
+		src/SpinLockThreadWorker.cpp
+		src/ScopedSpinLock.cpp
+		src/ScopedSpinLock.h
 )
 
 target_include_directories(ThreadPool PUBLIC include/)
